--- a/style.css
+++ b/style.css
@@ -1,4 +1,21 @@
-h1 {
-    font-size: 50px;
+.ho {
     color: tomato;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: aqua;
+}
+.ma {
+    color: green;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: red;
+}
+.ca{
+    color: blueviolet;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: black;
+}
+
+.en {
+    color: blue;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: yellowgreen;
 }
