--- a/style.css
+++ b/style.css
@@ -19,3 +19,15 @@
     font-family: 'Courier New', Courier, monospace;
     background-color: yellowgreen;
 }
+.di {
+    background-color: brown;
+    width: 100px;
+    height: 50px;
+}
+.bot {
+    color: blue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+    border-radius: 20%;
+
+}
